# whisper-turbo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  README_zh.md  benchmark.py  install_turbo.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml  test.yml
examples/: quick_demo.py  turbo_example.py
whisper/: __init__.py  optimizations.py  turbo_model.py  turbo_transcribe.py
